* Fixed #682: Drag & Drop range exception

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -11,6 +11,7 @@ V6.5: (under development)
   * Fixed #626: Wrong hot node selection during mouse movement over different nodes
   * Fixed #679: The OnChange event when right clicking a node should always be fired before the OnPopup event
   * Fixed #678: Occasional Access Violation in GetDisplayRect
+  * Fixed #682: Drag & Drop range exception  
   
 V6.4.1: (26 Oct 2016)
   * Fixed #549: Drawing issue with toCheckSupport an toExtendedFocus
