--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,5 +1,6 @@
 V6.5.1 (Under developement)
   * Fixed issue #687 by extracting new method DeleteNodes() from existing DeleteSelectedNodes().
+  * Fixed issue #689: Possible Integer overflow in PaintColumnHeader() when dragging a column to first position.
     
 V6.5: (18 Jan 2017)
   * License change from LGPL to "LGPL with static linking exception". See issue #673 for details.
