--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,4 +1,5 @@
-V6.6 (Under developement)
+V6.6 (Under developement)         
+  * Fixed issue #312: When unfocusing a node while the Spacebar is still pressed, the check state should be toggled
   * Fixed issue #161: Shift+End does not work as expected with toGridExtension + toFullRowSelect options set
   * Fixed issue #697: OnChange not fired when unselecting nodes
   * Fixed issue #692: HitInfo for OnNodeClick event may differ much from HandleMouseDown
