--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,4 +1,5 @@
 V6.6 (Under developement)
+  * Fixed issue #699: TVTColors.GetColor: Honor user defined colors also when StyleServices are enabled (Thx to luebbe for PR)
   * Fixed issue #698: Horizontal scrollbar may not update when turning on or off columns
   * Fixed issue #350: TVirtualTreeColumn.fLeft should be in protected part         
   * Fixed issue #312: When unfocusing a node while the Spacebar is still pressed, the check state should be toggled
