--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,4 +1,5 @@
-V6.6 (Under developement)
+﻿V6.6 (Under developement)
+  * Fixed issue #691: When the user uses Cursor-Left/Right, the Virtual TreeView should perform horizontal scrolling if there is no other operation
   * Fixed issue #699: TVTColors.GetColor: Honor user defined colors also when StyleServices are enabled (Thx to luebbe for PR)
   * Fixed issue #698: Horizontal scrollbar may not update when turning on or off columns
   * Fixed issue #350: TVirtualTreeColumn.fLeft should be in protected part         
