--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,4 +1,4 @@
-V6.6 (Under developement)
+V6.6 (04 Apr 2017)
   * Fixed issue #705: Added support for RAD Studio 10.2 Tokyo
   * Fixed issue #702: Access Violation at designtime when RootNodeCount is >0
   * Fixed issue #703: Possibly wrong selection if nodes are selected during DeleteChildren()
