Fixed issue #500: Issue with node selection "from code" for disabled nodes with toLevelSelectConstraint option * Found that several paths set the above flag and they need to be corrected not to set for a disabled node * Added a new function GetNodeLevelForSelectConstraint to avoid spaghetti code conditions in all those places

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,7 @@
+V6.7: (under development)
+  * Fixed issue #714: Integer overflow in TBaseVirtualTree's InternalAddFromStream
+  * Fixed issue #500: Issue with node selection "from code" for disabled nodes with toLevelSelectConstraint option  
+
 V6.6 (04 Apr 2017)
   * Fixed issue #705: Added support for RAD Studio 10.2 Tokyo
   * Fixed issue #702: Access Violation at designtime when RootNodeCount is >0
