--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,7 @@
-V6.7: (under development)
+﻿V6.7: (under development)
   * Fixed issue #714: Integer overflow in TBaseVirtualTree's InternalAddFromStream
   * Fixed issue #500: Issue with node selection "from code" for disabled nodes with toLevelSelectConstraint option  
+  * Fixed issue #499: Incorrect behavior with toLevelSelectConstraint and ctrl+A 
 
 V6.6 (04 Apr 2017)
   * Fixed issue #705: Added support for RAD Studio 10.2 Tokyo
