--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -3,7 +3,8 @@
   * Fixed issue #500: Issue with node selection "from code" for disabled nodes with toLevelSelectConstraint option  
   * Fixed issue #499: Incorrect behavior with toLevelSelectConstraint and ctrl+A 
   * Fixed issue #649: Cell navigation problems with toAutoSpanColumns for left and right keys
-
+  * Fixed issue #712: Strange behaviour of AutoFitColumns
+  
 V6.6 (04 Apr 2017)
   * Fixed issue #705: Added support for RAD Studio 10.2 Tokyo
   * Fixed issue #702: Access Violation at designtime when RootNodeCount is >0
