--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ V6.7: (29 May 2017)
   * Fixed issue #499: Incorrect behavior with toLevelSelectConstraint and ctrl+A 
   * Fixed issue #649: Cell navigation problems with toAutoSpanColumns for left and right keys
   * Fixed issue #712: Strange behaviour of AutoFitColumns
-  * Fixed issue #718: Shift + Rght-Click should not extend selection
+  * Fixed issue #718: Shift + Right-Click should not extend selection
   * Fixed issue #706: Integer overflow in DetermineScrollDirections when timeGetTime wraps
   * Fixed issue #407: TVirtualDrawTree.InvalidateNode does not clear vsHeightMeasured
   * Enhancement #669: Create sample project for C++ Builder
