Fixed issue #726: Incorrect header hot painting by adding the RDW_UPDATENOW flag to the RedrawWindow() API call just like it is done in InvalidateNode().

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,4 +1,5 @@
 V7.0: (Under development)
+  * Fixed issue #726: Incorrect header hot painting
   * Fixed issue #722: Simplify custom header drawing while keeping default drawing
   * Fixed issue #467: Multi level checkboxes and BeginUpdate/EndUpdate issue
   * Fixed issue #391: Change property HotNode: Add a setter 
