--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,4 +1,5 @@
 V7.0: (Under development)
+  * Fixed issue #724: Error when reading "old" streams
   * Fixed issue #397: Horizontal autoscroll on focus does not properly scroll node into view if column width is larger than client width  
   * Fixed issue #727: Header not repainted after loading from stream
   * Fixed issue #726: Incorrect header hot painting
