--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,11 +1,12 @@
 V7.0: (Under development)
-  * Enhancement #735: Add event that is fired when a check state is needed. Updated code.
   * The support for Windows XP/2003 has been dropped (issue #707). This means:
     - We did not intentionally break XP support.
 	- We do no longer test on Windows XP/2003
 	- We may accept pull request for XP support if the code quality is sufficient.
 	- We recommend to use the V6 branch on Windows XP
+  * Fixed issue #750: Plus/Minus sizes are not scaled in DPI aware applications
   * Fixed issue #748: Per Monitor Dpi Scaling - Scrollbar Not Correct after Dpi Change
+  * Enhancement #735: Add event that is fired when a check state is needed.
   * Fixed issue #743: Ugly drawing of selection in report mode when VCL Styles are used
   * Fixed issue #742: TVTHeader.ParentFont should be True by default
   * Fixed issue #740: TVTHeaderPopupMenu should not delete menu items added at designtime 
