--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -48,6 +48,7 @@
   * Fixed issue #722: Simplify custom header drawing while keeping default drawing
   * Fixed issue #467: Multi level checkboxes and BeginUpdate/EndUpdate issue
   * Fixed issue #391: Change property HotNode: Add a setter 
+  * Fixed issue #767: Remove type TOldVTOption and ReadOldOptions()
   * Removed flag toDisableAutoscrollOnFocus from default configuration of a new Virtual TreeView to achieve a more common behavior with default properties.
   * poResizeToFitItem is now set by default in TVTHeaderPopupMenu.Options
 
