Updated installation instrcutions for 10.3. #899

--- a/INSTALL.txt
+++ b/INSTALL.txt
@@ -3,7 +3,23 @@ Supported Windows Versions: Windows Vista and higher
 
 Extract the entire(!) ZIP file and follow the instructions below.
 
-Delphi / RAD Studio XE3 and higher Installation
+Delphi / RAD Studio 10.3 and higher Installation
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+1. Open the project group "Packages\RAD Studio *\VirtualTreeView.groupproj"
+2. Right click on "VirtualTreesD*.bpl" and click "Install"
+3. Go to "Tools > Options > Language > Delphi Options > Library > Library Path > [...]"
+   Browse to the "Source" folder of VirtualTreeView, press "OK", "Add", "OK"
+   Do this for both Win32 and Win64 platform, which you can choose in the dropdown box.
+4. C++ Builder users only:
+   In the Options dialog go to "Environment Options > C++ Options > Paths and Directories" 
+   a) Click "Library Path > [...]"                                                      
+      Browse to the "Source" folder of VirtualTreeView, press "OK", "Add", "OK"
+   b) Click "System Include path > [...]"                                                      
+      Browse to the "Source" folder of VirtualTreeView, press "OK", "Add", "OK"
+5. Close the RAD Studio Options dialog by clicking "Save".
+
+
+Delphi / RAD Studio XE3 - 10.2 Installation
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 1. Open the project group "Packages\RAD Studio *\VirtualTreeView.groupproj"
 2. Right click on "VirtualTreesD*.bpl" and click "Install"
@@ -15,8 +31,8 @@ Delphi / RAD Studio XE3 and higher Installation
    a) Click "Library Path > [...]"                                                      
       Browse to the "Source" folder of VirtualTreeView, press "OK", "Add", "OK"
    b) Click "System Include path > [...]"                                                      
-      Browse to the "Source" folder of VirtualTreeView, press "OK", "Add", "OK", 
-5. Close the RAD Studio Options dialog by clicking "OK" / Save".
+      Browse to the "Source" folder of VirtualTreeView, press "OK", "Add", "OK"
+5. Close the RAD Studio Options dialog by clicking "OK".
 
 
 Troubleshooting
