--- a/INSTALL.txt
+++ b/INSTALL.txt
@@ -11,10 +11,10 @@ Delphi / RAD Studio 10.3 and higher Installation
    Browse to the "Source" folder of VirtualTreeView, press "OK", "Add", "OK"
    Do this for both Win32 and Win64 platform, which you can choose in the dropdown box.
 4. C++ Builder users only:
-   In the Options dialog go to "Environment Options > C++ Options > Paths and Directories" 
-   a) Click "Library Path > [...]"                                                      
+   In the Options dialog go to "Environment Options > C++ Options > Paths and Directories"
+   a) Click "Library Path > [...]"
       Browse to the "Source" folder of VirtualTreeView, press "OK", "Add", "OK"
-   b) Click "System Include path > [...]"                                                      
+   b) Click "System Include path > [...]"
       Browse to the "Source" folder of VirtualTreeView, press "OK", "Add", "OK"
 5. Close the RAD Studio Options dialog by clicking "Save".
 
@@ -27,10 +27,10 @@ Delphi / RAD Studio XE3 - 10.2 Installation
    Browse to the "Source" folder of VirtualTreeView, press "OK", "Add", "OK"
    Do this for both Win32 and Win64 platform, which you can choose in the dropdown box.
 4. C++ Builder users only:
-   In the Options dialog go to "Environment Options > C++ Options > Paths and Directories" 
-   a) Click "Library Path > [...]"                                                      
+   In the Options dialog go to "Environment Options > C++ Options > Paths and Directories"
+   a) Click "Library Path > [...]"
       Browse to the "Source" folder of VirtualTreeView, press "OK", "Add", "OK"
-   b) Click "System Include path > [...]"                                                      
+   b) Click "System Include path > [...]"
       Browse to the "Source" folder of VirtualTreeView, press "OK", "Add", "OK"
 5. Close the RAD Studio Options dialog by clicking "OK".
 
@@ -39,28 +39,28 @@ Troubleshooting
 ~~~~~~~~~~~~~~~
 In case you experience any problems, try to delete all these files from your disk and then start over:
  - Virtualtrees.*
- - VTAccessibility.* 
+ - VTAccessibility.*
  - VTHeaderPopup.*
- - VirtualTreesD.* 
+ - VirtualTreesD.*
  - VirtualTreesR.*
-I recommand using UltraSearch for this task: http://www.jam-software.de/ultrasearch/ 
-  
-  
+I recommend using UltraSearch for this task: http://www.jam-software.de/ultrasearch/
+
+
 Please send comments and suggestions regarding the packages and the install
 instructions to joachim.marder@gmail.com or open an issue.
 
 
 C++ Builder XE3 and higher Installation
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-1. Open the project group "Packages\CBullder XE*\VirtualTreeView.groupproj"
+1. Open the project group "Packages\CBuilder XE*\VirtualTreeView.groupproj"
    that is closest to your version.
 2. Right click on "VirtualTreesR*.bpl" and click "Build"
 3. Right click on "VirtualTreesD*.bpl" and click "Install"
 4. Go to "Tools > Options > Environment Options > Delphi Options > Library > Library Path > [...]"
    Browse to the "Source" folder of VirtualTreeView, press "OK", "Add", "OK", "OK"
-5. Go to "Tools > Options > Environment Options > C++ Options > Paths and Directories" 
-   a) Click "Library Path > [...]"                                                      
+5. Go to "Tools > Options > Environment Options > C++ Options > Paths and Directories"
+   a) Click "Library Path > [...]"
       Browse to the "Source" folder of VirtualTreeView, press "OK", "Add", "OK"
-   b) Click "System Include path > [...]"                                                      
-      Browse to the "Source" folder of VirtualTreeView, press "OK", "Add", "OK", "OK""
+   b) Click "System Include path > [...]"
+      Browse to the "Source" folder of VirtualTreeView, press "OK", "Add", "OK", "OK"
 6. If you target Win64 you need to build VirtualTreesR*.bpl also for the platform "Win64"
