--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,4 +1,7 @@
-﻿V7.2.1: (07 Mar 2019)
+﻿V7.3: (04 Nov 2019)
+See: https://github.com/Virtual-TreeView/Virtual-TreeView/milestone/13
+
+V7.2.1: (07 Mar 2019)
 See: https://github.com/Virtual-TreeView/Virtual-TreeView/milestone/14?closed=1
 
 V7.2: (18 Feb 2019)
