Issue #1060: Updated installation instructions for RAD Studio 11.0

--- a/INSTALL.txt
+++ b/INSTALL.txt
@@ -3,10 +3,26 @@ Supported Windows Versions: Windows Vista and higher
 
 Extract the entire(!) ZIP file and follow the instructions below.
 
-Delphi / RAD Studio 10.3 and higher Installation
+Delphi / RAD Studio 10.4 and higher Installation
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-1. Open the project group "Packages\RAD Studio *\VirtualTreeView.groupproj"
+1. Open the project group "Packages\RAD Studio 10.4+\VirtualTreeView.groupproj"
 2. Right click on "VirtualTreesD*.bpl" and click "Install"
+3. Go to "Tools > Options > Language > Delphi Options > Library > Library Path > [...]"
+   Browse to the "Source" folder of VirtualTreeView, press "OK", "Add", "OK"
+   Do this for both Win32 and Win64 platform, which you can choose in the dropdown box.
+4. C++ Builder users only:
+   In the Options dialog go to "Environment Options > C++ Options > Paths and Directories"
+   a) Click "Library Path > [...]"
+      Browse to the "Source" folder of VirtualTreeView, press "OK", "Add", "OK"
+   b) Click "System Include path > [...]"
+      Browse to the "Source" folder of VirtualTreeView, press "OK", "Add", "OK"
+5. Close the RAD Studio Options dialog by clicking "Save".
+
+
+Delphi / RAD Studio 10.3
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+1. Open the project group "Packages\RAD Studio 10.3\VirtualTreeView.groupproj"
+2. Right click on "VirtualTreesD270.bpl" and click "Install"
 3. Go to "Tools > Options > Language > Delphi Options > Library > Library Path > [...]"
    Browse to the "Source" folder of VirtualTreeView, press "OK", "Add", "OK"
    Do this for both Win32 and Win64 platform, which you can choose in the dropdown box.
