--- a/INSTALL.txt
+++ b/INSTALL.txt
@@ -6,17 +6,22 @@ Extract the entire(!) ZIP file and follow the instructions below.
 Delphi / RAD Studio 10.4 and higher Installation
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 1. Open the project group "Packages\RAD Studio 10.4+\VirtualTreeView.groupproj"
-2. Right click on "VirtualTreesD*.bpl" and click "Install"
-3. Go to "Tools > Options > Language > Delphi Options > Library > Library Path > [...]"
-   Browse to the "Source" folder of VirtualTreeView, press "OK", "Add", "OK"
-   Do this for both Win32 and Win64 platform, which you can choose in the dropdown box.
-4. C++ Builder users only:
-   In the Options dialog go to "Environment Options > C++ Options > Paths and Directories"
-   a) Click "Library Path > [...]"
-      Browse to the "Source" folder of VirtualTreeView, press "OK", "Add", "OK"
-   b) Click "System Include path > [...]"
-      Browse to the "Source" folder of VirtualTreeView, press "OK", "Add", "OK"
-5. Close the RAD Studio Options dialog by clicking "Save".
+2. Right click on root elelment "VirtualTreeView" and click "Build All"
+3. Right click on "VirtualTreesD*.bpl" and click "Install"
+4. Go to "Tools > Options > Language > Delphi Options > Library
+5. Choose platform "Win32", click on "Library Path > [...]"
+   Browse to the "Packages\RAD Studio 10.4+\Win32\Release" folder of VirtualTreeView, 
+   press "Choose Folder", "Add", "OK"
+6. Choose platform "Win64", click on "Library Path > [...]"
+   Browse to the "Packages\RAD Studio 10.4+\Win64\Release" folder of VirtualTreeView, 
+   press "Choose Folder", "Add", "OK"
+7. C++ Builder users only:
+     In the Options dialog go to "Environment Options > C++ Options > Paths and Directories"
+     a) Click "Library Path > [...]"
+        Browse to the "Source" folder of VirtualTreeView, press "OK", "Add", "OK"
+     b) Click "System Include path > [...]"
+        Browse to the "Source" folder of VirtualTreeView, press "OK", "Add", "OK"
+8. Close the RAD Studio Options dialog by clicking "Save".
 
 
 Delphi / RAD Studio 10.3
