--- a/INSTALL.txt
+++ b/INSTALL.txt
@@ -6,7 +6,7 @@ Extract the entire(!) ZIP file and follow the instructions below.
 Delphi / RAD Studio 10.4 and higher Installation
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 1. Open the project group "Packages\RAD Studio 10.4+\VirtualTreeView.groupproj"
-2. Right click on root elelment "VirtualTreeView" and click "Build All"
+2. Right click on root element "VirtualTreeView" and click "Build All"
 3. Right click on "VirtualTreesD*.bpl" and click "Install"
 4. Go to "Tools > Options > Language > Delphi Options > Library
 5. Choose platform "Win32", click on "Library Path > [...]"
@@ -30,7 +30,7 @@ Delphi / RAD Studio 10.3
 2. Right click on "VirtualTreesD270.bpl" and click "Install"
 3. Go to "Tools > Options > Language > Delphi Options > Library > Library Path > [...]"
    Browse to the "Source" folder of VirtualTreeView, press "OK", "Add", "OK"
-   Do this for both Win32 and Win64 platform, which you can choose in the dropdown box.
+   Do this for both Win32 and Win64 platforms, which you can choose in the dropdown box.
 4. C++ Builder users only:
    In the Options dialog go to "Environment Options > C++ Options > Paths and Directories"
    a) Click "Library Path > [...]"
@@ -46,7 +46,7 @@ Delphi / RAD Studio 10.0 - 10.2 Installation
 2. Right click on "VirtualTreesD*.bpl" and click "Install"
 3. Go to "Tools > Options > Environment Options > Delphi Options > Library > Library Path > [...]"
    Browse to the "Source" folder of VirtualTreeView, press "OK", "Add", "OK"
-   Do this for both Win32 and Win64 platform, which you can choose in the dropdown box.
+   Do this for both Win32 and Win64 platforms, which you can choose in the dropdown box.
 4. C++ Builder users only:
    In the Options dialog go to "Environment Options > C++ Options > Paths and Directories"
    a) Click "Library Path > [...]"
